--- a/chat-ai_frontend/index.html
+++ b/chat-ai_frontend/index.html
@@ -17,5 +17,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://kit.fontawesome.com/6942583f36.js" crossorigin="anonymous"></script>
   </body>
 </html>
